--- a/public/index.html
+++ b/public/index.html
@@ -1,20 +1,29 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
-    <meta
-      name="description"
-      content="Web site created using create-react-app"
+
+    <script src="https://accounts.google.com/gsi/client" async defer></script>
+
+    <!-- ===============================================-->
+    <!-- Below is Roboto font for Material UI-->
+    <!-- ===============================================-->
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css?family=Lato:300,400,500,700&display=swap"
     />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <title>Task Tracker Application</title>
+
+    <!-- ===============================================-->
+    <!-- Material Icons font for using Icons component-->
+    <!-- ===============================================-->
+    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons" />
+
+    <title>Synthix Service Desk</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="root"></div>  
+    <div id="root"></div>
   </body>
 </html>
